--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,11 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    // MySQL
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
     // H2
-    runtimeOnly 'com.h2database:h2'
+//    runtimeOnly 'com.h2database:h2'
 
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
